--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.wrapper {
+  height: 100%;
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-direction: row;
+  background-image: url("../public/images/grass.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  transition: all 1s;
 }
 
-.App-link {
-  color: #61dafb;
+.playerWrapper {
+  width: 100%;
+  height: 800px;
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(3, 1fr); /*이것으로 넓이 조절*/
+  grid-template-rows: repeat(3, 1fr);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.England {
+  background-image: url("../public/images/background/englandBack.jpg");
+}
+
+.Brazil {
+  background-image: url("../public/images/background/brazilBack.jpg");
+}
+
+.Korea {
+  background-image: url("../public/images/background/koreaBack.jpg");
+}
+
+.mobileLayout {
+  flex-direction: column-reverse;
 }
